alteracao paragrafo teste pull index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Treinando linhas de comando git tal como: git init, git add, git push etc....</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ex animi vero sit sapiente doloremque dignissimos repudiandae itaque, 
+    <p>PULLTESTE...Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis ex animi vero sit sapiente doloremque dignissimos repudiandae itaque, 
         excepturi saepe, culpa voluptatem nobis earum vel consectetur soluta? Nesciunt, consectetur id!</p>
 
 
